# trcc-monitor

./: .gitignore  README.md  ROADMAP.md  config.example.toml  install.sh  pyproject.toml
packaging/systemd/: trcc-monitor.service
src/trcc_monitor/: __init__.py  app.py  cli.py  config.py  runner.py
src/trcc_monitor/collectors/: __init__.py  base.py  codex.py  gpu.py  limits.py  sessions.py  status.py  system.py  usage.py
src/trcc_monitor/render/: __init__.py  frame.py  mock.py  theme.py  widgets.py
src/trcc_monitor/sinks/: __init__.py  base.py  png.py  trccd.py
tests/: test_codex.py  test_config.py  test_gpu.py  test_limits.py  test_render.py  test_sessions.py  test_sinks.py  test_status.py  test_theme.py  test_usage.py
