[project]
name = "trcc-monitor"
version = "0.1.0"
description = "Headless Claude-usage + system dashboard for the Thermalright Trofeo Vision 9.16\" LCD"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Montana Tuska" }]
dependencies = [
    "Pillow>=10.0",
    "psutil>=5.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
trcc-monitor = "trcc_monitor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trcc_monitor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
